# car-ledger

./: .gitignore  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: ci.yaml  publish.yaml
backend/: Cargo.toml  Dockerfile  entrypoint.sh
backend/.sqlx/: query-1b66e685e1620bb543677ea958af440ceb569aca51ef24a0a43e9edf067bef77.json  query-259e00fc7d94614e9d604a87b32ecb4887db397fe68c8d8c9efdec66f6022c8e.json  query-7f1edef2f9631220b2f832be6655826aad99a8891ced1664e89640ad9e7baea7.json  query-ce7f7027ff2e15be4274e98a84f59ace3feb8483749cabd1d08529c29cd85094.json  query-e4b009e53110256ae55404f418badbb307e8e3afa04d8ceab272569a489087d2.json
backend/migrations/: 20241107111258_create_expenses_table.sql  20241107190049_add_mileage_to_expenses.sql  20241107190429_update_mileage_column.sql  20241107191732_add_price_to_expenses.sql
backend/src/: expense.rs  main.rs  user.rs  utils.rs
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: app.rs  main.rs  routes.rs
frontend/src/components/: expense_form.rs  expense_list.rs  mod.rs
