[package]
name = "car_ledger_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls", "macros", "uuid"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
actix-cors = "0.7.0"

[dev-dependencies]
actix-rt = "2"
