[package]
name = "car_ledger_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
web-sys = "0.3.50"
wasm-bindgen-futures = "0.4.32"
getrandom = { version = "0.2.15", features = ["js"] }
log = "0.4.22"
wasm-logger = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
